--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "axios": "^0.27.2",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
+    "pnpm": "^7.11.0",
     "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-paginate": "^8.1.3",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-share": "^4.4.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
